display name update changed

--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -2,13 +2,11 @@
 
 {% block profile %}
 
-<h1>{{ user.user_display_name }}'s Profile!</h1>
+
+<h1 id="new-name">{{ user.user_display_name }}'s Profile!</h1>
 <br>
 Update Display Name: 
-<form action="/update-display-name/{{ user.user_id }}" method="POST">
-    <input type="text" class="desired-name"></input>
-    <button class="update-display-name" id="{{ user.user_id }}">Update</button>
-</form>
-
-<script src="display-name-update.js"></script>
+<button class="update-display-name" id={{ user.user_id }}> Edit Name </button>
+<span class=display_name_{{ user.user_id }}> Current Name: {{ user.user_display_name }} </span>
+<script src="/static/js/display-name-update.js"></script>
 {% endblock %}
