map rendered, hero functional, bullet mechanics implemented

--- a/templates/game-page.html
+++ b/templates/game-page.html
@@ -2,7 +2,7 @@
 
 {% block kaboomcdn %}
 
-<script src="https://unpkg.com/kaboom/dist/kaboom.js"></script>
+<script src="https://unpkg.com/kaboom@2000.2.8/dist/kaboom.js"></script>
 
 {% endblock  %}
 
