--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -7,6 +7,6 @@
 <br>
 Update Display Name: 
 <button class="update-display-name" id={{ user.user_id }}> Edit Name </button>
-<span class=display_name_{{ user.user_id }}> Current Name: {{ user.user_display_name }} </span>
+<span class=display_name_{{ user.user_id }}> </span>
 <script src="/static/js/display-name-update.js"></script>
 {% endblock %}
