--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -40,10 +40,13 @@
 {% if 'email' in session %}
 <div>
   Your Account: <br>
-  <a href="/player-profile/{{ user.user_id }}">{{ user.user_display_name }}'s Profile</a>
-  </div>
+  <a href="/player-profile/{{ user.user_id }}">{{ user.user_display_name }}'s Profile</a><br><br>
+  <a href="/logout">Logout</a>
+  </div> <br>
+
 {% endif %}
 <br>
+
 <div>
   New here? 
   <a href="/registration">Create an account</a>
