core game complete

--- a/templates/game-page.html
+++ b/templates/game-page.html
@@ -9,6 +9,7 @@
 
 {% block game1 %}
 
-<script src="/static/js/game.js"></script>
+<script src="/static/js/game.js"></script><br>
+<a href="/">Homepage</a>
 
 {% endblock %}
