--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -41,11 +41,14 @@
 <div>
   Your Account: <br>
   <a href="/player-profile/{{ user.user_id }}">{{ user.user_display_name }}'s Profile</a><br><br>
-  <a href="/logout">Logout</a>
+  <a href="/game-1">Play Artificial Dunderhead</a>
   </div> <br>
 
 {% endif %}
 <br>
+<div>
+  <a href="/logout">Logout</a>
+</div>
 
 <div>
   New here? 
