--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -4,9 +4,15 @@
 
 
 <h1 id="new-name">{{ user.user_display_name }}'s Profile!</h1>
-<br>
 Update Display Name: 
 <button class="update-display-name" id={{ user.user_id }}> Edit Name </button>
 <span class=display_name_{{ user.user_id }}> </span>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<canvas id="test-chart"></canvas>
+
+
+<script src="/static/js/player-metrics.js"></script>
 <script src="/static/js/display-name-update.js"></script>
 {% endblock %}
