start dev game2

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -41,7 +41,8 @@
 <div>
   Your Account: <br>
   <a href="/player-profile/{{ user.user_id }}">{{ user.user_display_name }}'s Profile</a><br><br>
-  <a href="/game-1">Play Artificial Dunderhead</a>
+  <a href="/game-1">Play Artificial Dunderhead</a><br>
+  <a href="/game-2">Play Ghost Hunter</a>
   </div> <br>
   <div>
     <a href="/logout">Logout</a>
