--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -13,7 +13,7 @@ Update Display Name:
 
 
 
-<!-- <canvas id="test-chart"></canvas> -->
+<canvas id="test-chart"></canvas>
 
 
 <script src="/static/js/player-metrics.js"></script>
