more crud functions to query for game specific data

--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -13,7 +13,10 @@ Update Display Name:
 
 
 
-<canvas id="test-chart"></canvas>
+<canvas id="totals-chart"></canvas>
+<canvas id="ADChart"></canvas>
+
+
 
 
 <script src="/static/js/player-metrics.js"></script>
