spotlight effect function in game2

--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -9,11 +9,10 @@ Update Display Name:
 <button class="update-display-name" id={{ user.user_id }}> Edit Name </button>
 <span class=display_name_{{ user.user_id }}> </span>
 
+
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-
-
-<canvas id="totals-chart"></canvas>
+<canvas id="totals-chart"></canvas><br>
 <canvas id="ADChart"></canvas>
 
 
