bootstrapped top of page navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,29 +8,63 @@
             {% block title %}{% endblock %}
         </title>
         {% block kaboomcdn %}{% endblock %}
-
         {% block head %}{% endblock %}
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 offset+4">
-        <a href="/">Homepage</a>
-                </div>
-            </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="padding-top: 35px; padding-bottom: 35px">
+            <a class="navbar-brand" href="/">1-Up.Games</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
 
-            <div class="row">
-                <div class="col-md-3 mt-4">
-                    <form method="GET" name='profile-search' action="/profile/search">
-                <input id="search-keyword" class="form-control" type="text" value="search profiles!" name="keyword"><br>   
-                <small class="form-text text-muted">
-                    Leave it as is to show all profiles!
-                </small>
-                <input type="submit" value="search" class="btn btn-primary"><br><br>
-                    </form>
-                </div>
+                {% if 'email' not in session %}
+
+                <li class="nav-item active">
+                    <a class="nav-link" href="/log-in">Login<span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item active">
+                    <a class="nav-link" href="/registration">Register<span class="sr-only">(current)</span></a>
+                </li>
+
+                {% endif %}
+
+                {% if 'email' in session %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Profile
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="/player-profile/{{session['user_id']}}">Profile Details</a>
+                      <a class="dropdown-item" href="/logout">Logout</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Games
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/game-1">Artificial Dunderhead</a>
+                    <a class="dropdown-item" href="/game-2">Vampiro</a>
+                  </div>
+                </li>
+                {% endif %}
+              </ul>
+              <form class="form-inline my-2 my-lg-0" method="GET" name="profile-search" action="/profile/search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-keyword" name="keyword" value="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
             </div>
+          </nav>
+
+        <!-- THIS IS WHERE YOU STOP NEW CODE -->
+
          </div>
-        
     </head>
     <body>
         {% block searchResults %}{% endblock %}
@@ -39,6 +73,7 @@
         {% block body %}{% endblock %}
         {% block registration %}{% endblock %}
         {% block after_body %}{% endblock %}
+        {% block login %}{% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
