--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,46 +14,9 @@
     {% endif %}
     {% endwith %}
   
-{% if 'email' not in session %}
-<h2>Please Log In</h2>
-<form action="/login" method="POST">
-  <p>
-    Email <input type="text" name="email">
-  </p>
-  <p>
-    Password <input type="password" name="password">
-  </p>
-
-  <p>
-    <input type="submit">
-  </p>
-</form>
-<br>
-<div>
-  Your Account: <br>
-  <a href="/registration">Profile</a>
-</div>
-<br>
-<div>
-{% endif %}
-
-{% if 'email' in session %}
-<div>
-  Your Account: <br>
-  <a href="/player-profile/{{ user.user_id }}">{{ user.user_display_name }}'s Profile</a><br><br>
-  <a href="/game-1">Play Artificial Dunderhead</a><br>
-  <a href="/game-2">Play Ghost Hunter</a>
-  </div> <br>
   <div>
-    <a href="/logout">Logout</a>
+    Champion of the day is 
   </div>
 
-{% endif %}
-<br>
 
-
-<div>
-  New here? 
-  <a href="/registration">Create an account</a>
-  </div>
 {% endblock %}
