Updated homepage with dynamic information

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,11 @@
     {% endwith %}
   
   <div>
-    Champion of the day is 
+    REIGNING CHAMPION: {{user_name}} with a score of {{highest_score.score}}
+  </div><br>
+
+  <div>
+    Friendly Tip: {{ friendly_tip }}
   </div>
 
 
