homepage responsive to logouts

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,16 +53,19 @@
                     <a class="dropdown-item" href="/game-2">Vampiro</a>
                   </div>
                 </li>
+
+                <li class="nav-item active">
+                  <a class="nav-link" href="https://discord.gg/nGYYXgKf" target="_blank">Join Discord!<span class="sr-only">(current)</span></a>
+                </li>
                 {% endif %}
               </ul>
               <form class="form-inline my-2 my-lg-0" method="GET" name="profile-search" action="/profile/search">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-keyword" name="keyword" value="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-keyword" name="keyword" value="Search Profiles!">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
             </div>
           </nav>
 
-        <!-- THIS IS WHERE YOU STOP NEW CODE -->
 
          </div>
     </head>
