assets and end scene for game2 added

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,9 +18,10 @@
     REIGNING CHAMPION: {{user_name}} with a score of {{highest_score.score}}
   </div><br>
 
-  <div>
-    Friendly Tip: {{ friendly_tip }}
-  </div>
-
+  <marquee>
+    <div>
+      Friendly Tip: {{ friendly_tip }}
+    </div>
+  </marquee>
 
 {% endblock %}
