title screen 2 done

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/game-1">Artificial Dunderhead</a>
-                    <a class="dropdown-item" href="/game-2">Vampiro</a>
+                    <a class="dropdown-item" href="/game-2">Sundown till Sunrise</a>
                   </div>
                 </li>
 
