game3 almost done

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/game-1">Artificial Dunderhead</a>
                     <a class="dropdown-item" href="/game-2">Sundown till Sunrise</a>
+                    <a class="dropdown-item" href="/game-3">Responsibility Run</a>
                   </div>
                 </li>
 
