texts centered, homepage good

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,14 +14,42 @@
     {% endif %}
     {% endwith %}
   
-  <div>
+  <div class="center">
     REIGNING CHAMPION: {{user_name}} with a score of {{highest_score.score}}
   </div><br>
 
   <marquee>
-    <div>
+    <div class="text-white">
       Friendly Tip: {{ friendly_tip }}
     </div>
   </marquee>
+
+  <div class="center">
+    <h1>Getting Started</h1>
+  </div>
+    <div class="text-left">
+      <li>
+         Step 1: If you haven't already, register to create an account in the navbar above. <br>
+      </li>
+      <li>
+          Step 2: The navbar should now look different! Click on 'Profile' to access your account. <br>
+      </li>
+      <li>
+          Step 3: When you're ready and logged in, click 'Games' and choose! <br>
+      </li>
+      </div>
+      <div class="center">
+    Have fun!!!
+      </div>
+    </div>
+
+  <div class="footer">
+    <h1>About Me</h1>
+    Jake is a fullstack software engineer, born in the Bay Area. Their hobbies include yarn-craft, video games, and lounging with their dogs. As someone who prides themselves as a self-learner, their craft and passions inspired them to develop an arcade hub site featuring hand-made JS based games.
+
+    Professionally, their career has led them through organizations focused on web development in e-commerce and cutting-edge tech with hardware aspects. Seeing the magic of code come to life, quite literally, pushed them to learn the skills it takes to immerse themselves in their work under a more technical lens. 
+
+    Enjoy yourself! 
+  </div>
 
 {% endblock %}
