--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,16 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+
         <title>
             {% block title %}{% endblock %}
         </title>
         {% block kaboomcdn %}{% endblock %}
         {% block head %}{% endblock %}
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="padding-top: 25px; padding-bottom: 25px">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding-top: 25px; padding-bottom: 25px">
             <a class="navbar-brand" href="/">1-Up.Games</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -51,7 +54,7 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/game-1">Artificial Dunderhead</a>
                     <a class="dropdown-item" href="/game-2">Sundown till Sunrise</a>
-                    <a class="dropdown-item" href="/game-3">Responsibility Run</a>
+                    <a class="dropdown-item" href="/game-3">Responsibility Rain</a>
                   </div>
                 </li>
 
@@ -78,6 +81,10 @@
         {% block registration %}{% endblock %}
         {% block after_body %}{% endblock %}
         {% block login %}{% endblock %}
+
+        <video autoplay loop muted playsinline id="bgvid">
+          <source src="static/css/wallpaper.mp4" type="video/mp4">
+        </video>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
