--- a/templates/game-page-1.html
+++ b/templates/game-page-1.html
@@ -10,11 +10,22 @@
 {% block game1 %}
 
 <div class="container">
-    <div class="row justify-content-md-center">
-        <div class="col-md-8 offset-2">
+        <div class="game-window">
             <script src="/static/js/game.js"></script>
         </div>
-    </div>  
+
+        <div class="game-summary">
+            [CLASSIFIED] ARTIFICIAL DUNDERHEAD <br><br>
+            The year is 2080 and humanity has perfected their AI technology.<br> 
+            Not much was left of society after robots gained the ability to <br>
+            learn. Such powerful and sentient technology inadvertently <br>
+            sent a signal across the cosmos, inspiring jealousy among other <br>
+            organic lifeforms.<br><br>
+            On the run since their development, Artificial Dunderhead is <br>
+            on the run from alien space invaders that seek to steal <br>
+            the technology that lives inside of the former!
+        </div>
 </div>
+
 
 {% endblock %}
