--- a/templates/game-page-3.html
+++ b/templates/game-page-3.html
@@ -10,11 +10,25 @@
 {% block game1 %}
 
 <div class="container">
-<div class="row justify-content-md-center">
-    <div class="col-md-8 offset-2">
-    <script src="/static/js/game3.js"></script>
-    <div>
-</div>  
+    <div class="game-window">
+        <script src="/static/js/game3.js"></script>
+    </div>
+
+    <div class="game-summary">
+        [CLASSIFIED] Responsibility Rain <br><br>
+        After a long day, one can only hope for precious dreams <br>
+        of life outside of the norm. Remain lazy, remain in bed. <br>
+        But don’t let the intrusive thoughts around your chores <br>
+        ruin your day, avoid them at all costs. On the flip side, <br>
+        keep the good vibes going and lucid dream your next <br>
+        vacation, etc. <br><br>
+
+        Upon every dream-thought you come into contact with, a <br>
+        mysterious and beautiful image overwhelms the background of <br>
+        your mind. <br><br>
+
+        Ahh, to sleep well. 
+    </div>
 </div>
 
 {% endblock %}
