--- a/templates/game-page-2.html
+++ b/templates/game-page-2.html
@@ -10,11 +10,26 @@
 {% block game1 %}
 
 <div class="container">
-<div class="row justify-content-md-center">
-    <div class="col-md-8 offset-2">
-    <script src="/static/js/game2.js"></script>
-    <div>
-</div>  
+    <div class="game-window">
+        <script src="/static/js/game2.js"></script>
+    </div>
+
+    <div class="game-summary">
+        [CLASSIFIED] Sundown till Sunrise <br><br>
+        It’s a crucial time of night for ghouls and <br>
+        goblins; the sun is about to rise in about 2 <br>
+        minutes and creatures like V don’t necessarily <br>
+        have an appetite or dark energy then. Upon their <br>
+        arrival home, they’re shocked to see their bat <br>
+        children fluttering out and about. To make <br>
+        matters worse, it seems that ghosts are out to <br>
+        get you! <br><br>
+        Collect as many of your bat children as you can <br>
+        before the sunrise! They’re all depending on you. <br><br><br>
+        30 seconds before sunrise, V's resting place will become <br>
+        available on the left side of the cemetary. Touch it <br>
+        to end the nightmare and stay the living-dead another night.
+    </div>
 </div>
 
 {% endblock %}
