--- a/templates/game-page-1.html
+++ b/templates/game-page-1.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Artificial Dunderhead {% endblock %}
+
 {% block kaboomcdn %}
 
 <script src="https://unpkg.com/kaboom@2000.2.8/dist/kaboom.js"></script>
@@ -15,15 +17,13 @@
         </div>
 
         <div class="game-summary">
-            [CLASSIFIED] ARTIFICIAL DUNDERHEAD <br><br>
-            The year is 2080 and humanity has perfected their AI technology.<br> 
-            Not much was left of society after robots gained the ability to <br>
-            learn. Such powerful and sentient technology inadvertently <br>
-            sent a signal across the cosmos, inspiring jealousy among other <br>
-            organic lifeforms.<br><br>
-            On the run since their development, Artificial Dunderhead is <br>
-            on the run from alien space invaders that seek to steal <br>
-            the technology that lives inside of the former!
+            <b>[CLASSIFIED] ARTIFICIAL DUNDERHEAD</b> <br><br>
+            The year is 2080 and humanity has perfected their AI technology. Not much was left of society after robots gained
+            the ability to learn. Such powerful and sentient technology inadvertently sent a signal across the cosmos, inspiring 
+            jealousy among other organic lifeforms. <br><br>
+            
+            On the run since their development, Artificial Dunderhead is on the run from alien space invaders that seek 
+            to steal the technology that lives inside of the former!
         </div>
 </div>
 
