--- a/templates/game-page-2.html
+++ b/templates/game-page-2.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Sundown till Sunrise {% endblock %}
+
 {% block kaboomcdn %}
 
 <script src="https://unpkg.com/kaboom@2000.2.8/dist/kaboom.js"></script>
@@ -15,19 +17,19 @@
     </div>
 
     <div class="game-summary">
-        [CLASSIFIED] Sundown till Sunrise <br><br>
-        It’s a crucial time of night for ghouls and <br>
-        goblins; the sun is about to rise in about 2 <br>
-        minutes and creatures like V don’t necessarily <br>
-        have an appetite or dark energy then. Upon their <br>
-        arrival home, they’re shocked to see their bat <br>
-        children fluttering out and about. To make <br>
-        matters worse, it seems that ghosts are out to <br>
+        <b>[CLASSIFIED] Sundown till Sunrise</b> <br><br>
+        It’s a crucial time of night for ghouls and 
+        goblins; the sun is about to rise in about 2 
+        minutes and creatures like V don’t necessarily 
+        have an appetite or dark energy then. Upon their 
+        arrival home after a wild Friday out, they’re shocked to see their bat 
+        children fluttering awake and about. To make 
+        matters worse, it seems that ghosts are out to
         get you! <br><br>
-        Collect as many of your bat children as you can <br>
-        before the sunrise! They’re all depending on you. <br><br><br>
-        30 seconds before sunrise, V's resting place will become <br>
-        available on the left side of the cemetary. Touch it <br>
+        Collect as many of your bat children as you can 
+        before the sunrise! They’re all depending on you. <br><br>
+        30 seconds before sunrise, V's resting place will become 
+        available on the left side of the cemetary. Touch it
         to end the nightmare and stay the living-dead another night.
     </div>
 </div>
