--- a/templates/game-page-3.html
+++ b/templates/game-page-3.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Responsibility Rain {% endblock %}
+
 {% block kaboomcdn %}
 
 <script src="https://unpkg.com/kaboom@2000.2.8/dist/kaboom.js"></script>
@@ -15,7 +17,7 @@
     </div>
 
     <div class="game-summary">
-        [CLASSIFIED] Responsibility Rain <br><br>
+        <b>[CLASSIFIED] Responsibility Rain</b> <br><br>
         After a long day, one can only hope for precious dreams <br>
         of life outside of the norm. Remain lazy, remain in bed. <br>
         But don’t let the intrusive thoughts around your chores <br>
