--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Register {% endblock %}
+
 {% block registration %}
 
 {% with messages = get_flashed_messages() %}
