--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"></script>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -22,17 +27,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
                 </li>
 
                 {% if 'email' not in session %}
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="/log-in">Login<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/log-in">Login<span class="sr-only"></span></a>
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="/registration">Register<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/registration">Register<span class="sr-only"></span></a>
                 </li>
 
                 {% endif %}
@@ -59,15 +64,15 @@
                 </li>
 
                 <li class="nav-item active">
-                  <a class="nav-link" href="https://discord.gg/nGYYXgKf" target="_blank">Join Discord!<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="https://discord.gg/nGYYXgKf" target="_blank">Join Discord!<span class="sr-only"></span></a>
                 </li>
 
                 <li class="nav-item active">
-                  <a class="nav-link" href="about-author" target="_blank">About Author<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/about-author" target="_blank">About Author<span class="sr-only"></span></a>
                 </li>
                 {% endif %}
               </ul>
-              <form class="form-inline my-2 my-lg-0" method="GET" name="profile-search" action="/profile/search">
+              <form class="form-inline my-2 my-lg-0 offset-7" method="GET" name="profile-search" action="/profile/search">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-keyword" name="keyword" value="Search Profiles!">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
