--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Profile {% endblock %}
+
 {% block profile %}
 
 <div class="center">
@@ -20,6 +22,6 @@ Update Display Name:
 
 
 
-<!-- <script src="/static/js/player-metrics.js"></script> -->
+<script src="/static/js/player-metrics.js"></script>
 <script src="/static/js/display-name-update.js"></script>
 {% endblock %}
