--- a/templates/profile-search-results.html
+++ b/templates/profile-search-results.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Search Results {% endblock %}
+
 {% block searchResults %}
 
 <h1>Profile Search Results:</h1>
