working on form background

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,8 +17,8 @@
     <!-- <div class="center"></div> -->
 
   <div class="container">
-    <div class="col offset-7">
-      <div class="row align-items-center text-white">
+    <div class="col offset-5">
+      <div class="row text-white">
       REIGNING CHAMPION: {{user_name}} with a score of {{highest_score.score}}
       </div>
     </div>
@@ -30,23 +30,24 @@
     </div>
   </marquee>
 
-  <div class="center">
-    <h1>Getting Started</h1>
+<div class="container text-white">
+  <div class="col offset-5">
+      <h1>Getting Started</h1>
   </div>
-    <div class="text-left">
+  <div class="col offset-4">
       <li>
-         Step 1: If you haven't already, register to create an account in the navbar above. <br>
-      </li>
-      <li>
-          Step 2: The navbar should now look different! Click on 'Profile' to access your account. <br>
-      </li>
-      <li>
-          Step 3: When you're ready and logged in, click 'Games' and choose! <br>
-      </li>
-      </div>
-      <div class="center">
-    Have fun!!!
-      </div>
+        Step 1: If you haven't already, register to create an account in the navbar above. <br>
+     </li>
+     <li>
+         Step 2: The navbar should now look different! Click on 'Profile' to access your account. <br>
+     </li>
+     <li>
+         Step 3: When you're ready and logged in, click 'Games' and choose! <br>
+     </li><br>
+     <div class="col offset-3">
+        Have fun!
     </div>
+  </div>
+</div>
 
 {% endblock %}
