--- a/templates/base.html
+++ b/templates/base.html
@@ -64,17 +64,21 @@
                 </li>
 
                 <li class="nav-item active">
-                  <a class="nav-link" href="https://discord.gg/nGYYXgKf" target="_blank">Join Discord!<span class="sr-only"></span></a>
+                  <a class="nav-link" href="https://discord.gg/nGYYXgKf" target="_blank">Discord<span class="sr-only"></span></a>
                 </li>
 
                 <li class="nav-item active">
-                  <a class="nav-link" href="/about-author" target="_blank">About Author<span class="sr-only"></span></a>
+                  <a class="nav-link" href="/about-author" target="_blank">About<span class="sr-only"></span></a>
                 </li>
                 {% endif %}
               </ul>
-              <form class="form-inline my-2 my-lg-0 offset-7" method="GET" name="profile-search" action="/profile/search">
+              <form class="form-inline my-2 my-lg-0 offset-6" method="GET" name="profile-search" action="/profile/search">
+                <div class="input-group">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-keyword" name="keyword" value="Search Profiles!">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <div class="input-group-append">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </div>
+                </div>
               </form>
             </div>
           </nav>
