--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -4,13 +4,23 @@
 
 {% block aboutme %}
 
-<div class="text-white">
-    <h1>Who are you?</h1>
-    Jake is a fullstack software engineer, born in the Bay Area. Their hobbies include yarn-craft, video games, and lounging with their dogs. As someone who prides themselves as a self-learner, their craft and passions inspired them to develop an arcade hub site featuring hand-made JS based games.
-
-    Professionally, their career has led them through organizations focused on web development in e-commerce and cutting-edge tech with hardware aspects. Seeing the magic of code come to life, quite literally, pushed them to learn the skills it takes to immerse themselves in their work under a more technical lens. 
-
-    Enjoy yourself! 
+<div class="container text-white">
+    <div class="row">
+        <div class="col-5 mt-5 offset-2">
+            <img src='static/css/selife.JPG'>
+        </div>
+        
+        <div class="col-5 mt-5 offset+4">
+            <h1>Who am I?</h1><br>
+            <p>
+                Jake is a fullstack software engineer, born in the Bay Area. Their hobbies include yarn-craft, video games, and lounging with their dogs.
+                As someone who prides themselves as a self-learner, their craft and passions inspired them to develop an arcade hub site featuring hand-made 
+                JS based games. Professionally, their career has led them through organizations focused on web development in e-commerce and cutting-edge 
+                tech with hardware aspects. Seeing the magic of code come to life, quite literally, pushed them to learn the skills it takes to immerse themselves 
+                in their work under a more technical lens.<br><br> Enjoy yourself! 
+            </p>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
