--- a/templates/login-page.html
+++ b/templates/login-page.html
@@ -5,9 +5,9 @@
 {% block login %}
 
 <div class="container mt-4">
-  <div class="offset-8 mt-5">
+  <div class="offset-4 mt-5">
     <div class="col">
-      <h1 class="text-white">Please Log In</h1>
+      <h1 class="text-white">Log In</h1>
       <form action="/handle-login" method="POST" class="text-white">
         <p>
           Email <input
