--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,9 +16,9 @@
 
     <!-- <div class="center"></div> -->
 
-  <div class="container">
-    <div class="col offset-5">
-      <div class="row text-white">
+  <div class="container text-white window-bg">
+    <div class="row text-center">
+      <div class="col">
       REIGNING CHAMPION: {{user_name}} with a score of {{highest_score.score}}
       </div>
     </div>
@@ -30,23 +30,31 @@
     </div>
   </marquee>
 
-<div class="container text-white">
-  <div class="col offset-5">
-      <h1>Getting Started</h1>
-  </div>
-  <div class="col offset-4">
-      <li>
-        Step 1: If you haven't already, register to create an account in the navbar above. <br>
-     </li>
-     <li>
-         Step 2: The navbar should now look different! Click on 'Profile' to access your account. <br>
-     </li>
-     <li>
-         Step 3: When you're ready and logged in, click 'Games' and choose! <br>
-     </li><br>
-     <div class="col offset-3">
-        Have fun!
+<div class="container text-white text-window mt-5">
+  <div class="row">
+    <div class="col text-center mt-2">
+        <h1>Getting Started</h1>
     </div>
+  </div>
+
+  <div class="row">
+    <div class="col offset-3">
+        <li>
+          Step 1: If you haven't already, register to create an account in the navbar above. <br>
+      </li>
+      <li>
+          Step 2: The navbar should now look different! Click on 'Profile' to access your account. <br>
+      </li>
+      <li>
+          Step 3: When you're ready and logged in, click 'Games' and choose! <br>
+      </li><br>
+    </div>
+
+      <div class="row offset-1">
+      <div class="col text-center">
+          <b>Have fun!</b>
+      </div>
+      </div>
   </div>
 </div>
 
