charts debugged and up

--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -17,7 +17,9 @@ Update Display Name:
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <canvas id="totals-chart"></canvas><br>
-<canvas id="ADChart"></canvas>
+<canvas id="game1-chart"></canvas>
+<canvas id="game2-chart"></canvas>
+<canvas id="game3-chart"></canvas>
 
 
 
